# TopMT

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  tops_freq_drug_bank.pkl
examples/7d3i/: 01_sample_tops_pd.sh  02_assign_mols.sh
examples/7d3i/structures/: 7d3i_l.mol2  7d3i_l.sdf  7d3i_p.pdbqt
saved_models/top_sample/checkpoints/: epoch=4-step=366300.ckpt
saved_models/type_assign/checkpoints/: epoch=2280-step=510900.ckpt
scripts/: assign_from_tops.py  collect_pos_files.py  convert_pdbqt.py  convert_pdbqt_sdf.py  pocket_detection.py  post_docking.py  sample_tops.py  select_top_mols.py  sort_top_mols.py  train_DGT.py
src/pbdd/: __init__.py
src/pbdd/data_processing/sphere_filling/: filling.py
src/pbdd/post_processing/: mol_csp.py  mol_search.py  mol_search_v2.py  sample.py  scoring.py  utils.py
